[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
[project]
name = "agent-security-platform"
version = "1.0.0"
description = "Consolidated agent security platform. [8th M]"
authors = [{name = "wwb-bill", email = "wwb.bill@qq.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
[project.scripts]
agent-sec = "agent_security_platform.cli:main"
[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]
[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
testpaths = ["tests"]